--- a/index.html
+++ b/index.html
@@ -69,15 +69,13 @@
         div.textContent = dashboardName;
 
         div.onclick = () => {
-          window.parent.postMessage({
-            type: "sas.navigation",
-            action: "drillToUrl",
-            data: {
-              url: link,
-              target: "_blank"
-            }
-          }, "*");
-        };
+  const a = document.createElement("a");
+  a.href = link;
+  a.target = "_blank";
+  a.rel = "noopener noreferrer";
+  a.click();
+};
+
 
         rightPanel.appendChild(div);
       });
